# wakapi-anyide

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  test.py  wak.toml
.github/workflows/: ci.yml
python/wakapi_anyide/: __init__.py  __main__.py  _watch.pyi  cli.py  runner.py
python/wakapi_anyide/_rust/watch/: __init__.pyi
python/wakapi_anyide/helpers/: asynctools.py  filediffer.py  ini.py  mutex.py
python/wakapi_anyide/models/: config.py  environment.py  project.py
python/wakapi_anyide/watchers/: __init__.py  filewatcher.py  types.py
src/: lib.rs  watch.rs
test/: wak.toml
wakapi_anyide/: __init__.py
wakapi_anyide/backport/: glob.py
wakapi_anyide/models/: config.py  environment.py
