[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.10"
typer-slim = "^0.12.5"
aiofiles = "^24.1.0"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
maturin = "^1.7.4"

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "wakapi_anyide._watch"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core", "maturin>=1.0,<2.0"]
build-backend = "maturin"
